--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="container">
 			<header class="group top-nav">
 				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
-				    <span class="logo">DRACO</span>
+				    <span class="logo">Priyanshu Sinha</span>
 				</div>
 			    <nav id="navbar-1" class="navbar item-nav">
 				    <ul>
@@ -49,10 +49,12 @@
 					<img src="img/ava.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>I love to<br><span id="typed"></span></h1>
+					<h1>I love<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					I am currently a sophomore electrical engineering student at <b>Delhi Technological University (Formerly DCE)</b> who hopes to attend the Stanford School of
+					Engineering in coming years. I am really good at sketching, Web or Graphic Designing and Video Editing and always spend
+					my time in these hobbies while procrastinating other work.
 				</p>
 			</div>
 		</div>
@@ -63,19 +65,19 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
+				<li>Sep 2022 - Present</li>
+				<li><a href="https://www.teamraftaar.me">Team Raftaar DTU</a></li>
+				<li>Electrical and Electronics Engineer</li>
+			</ul>
+			<ul class="work-list">
+				<li>2022-Present</li>
+				<li><a href="#">Delhi Technological University</a></li>
+				<li>Undergraduate Researcher</li>
 			</ul>
 			<ul class="work-list">
 				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
-			</ul>
-			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
+				<li><a href="#">Cultural Council and INNOVA</a></li>
+				<li>Graphic Designer and Video-Editor</li>
 			</ul>
 		</div>
 	</div>
@@ -133,14 +135,14 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+			    	<p>Designed and developed by Priyanshu in India ©2022</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
 						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
 						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
 					</ul>
 			    </div>
 			</div>
@@ -155,7 +157,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+		strings: ["Rock Music", "to drink tea", "solving problems"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
