--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Priyanshu Sinha</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
+    <meta name="description" content="Hey! Myself Priyanshu Sinha from India. Welcome to my corner of the web.">
     <meta name="author" content="Priyanshu Sinha">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/kube.min.css" />
