--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<style>
 		.intro h1:before {
-
 			content: 'SINHA';
 		}
 	</style>
@@ -110,16 +109,16 @@
 		<div class="container">
 			<h1>Technical<br>Skills</h1>
 			<ul class="skill-list list-flat">
+				<li>Simulation & CAD</li>
+				<li>MATLAB (Simulink) / AutoDesk Fusion 360 / AutoCAD</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Video Editing & Graphic Designing</li>
+				<li>Final Cut Pro / Figma / Affinity Designer</li>
+			</ul>
+			<ul class="skill-list list-flat">
 				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
-			</ul>
-			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
-			</ul>
-			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>ReactJS / Javascript / HTML / CSS / SASS</li>
 			</ul>
 		</div>
 	</div>
@@ -127,7 +126,7 @@
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>there is beauty in simplicity.</h1>
 		</div>
 	</div>
 
