--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
+						<li><a href="mailto:officialpriyanshusinha@gmail.com"><i class="fa fa-send"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="http://dribbble.com/priyanshusinha"><i class="fa fa-dribbble"></i></a></li>
+						<li><a href="https://twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
 					</ul>
 			    </div>
 			</div>
