--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<li>Undergraduate Researcher</li>
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
+				<li>2021-Present</li>
 				<li><a href="#">Cultural Council and INNOVA</a></li>
 				<li>Graphic Designer and Video-Editor</li>
 			</ul>
