--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</ul>
 			<ul class="work-list">
 				<li>2021-Present</li>
-				<li><a href="#">Cultural Council and INNOVA</a></li>
+				<li><a href="#">Cultural Council and INNOVA DTU</a></li>
 				<li>Graphic Designer and Video-Editor</li>
 			</ul>
 		</div>
