--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<div class="container">
 			<h1>Award &amp;<br>Achievements</h1>
 			<ul class="award-list list-flat">
-				<li>January 2014</li>
+				<li>August 2022</li>
 				<li>Attained PHP5 certification</li>
 				<li>Hold world/Olympic record</li>
 			</ul>
@@ -140,6 +140,7 @@
 					<ul class="social list-flat right">
 						<li><a href="mailto:officialpriyanshusinha@gmail.com"><i class="fa fa-send"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://www.instagram.com/trulysinha/"><i class="fa fa-instagram"></i></a></li>
 						<li><a href="http://dribbble.com/priyanshusinha"><i class="fa fa-dribbble"></i></a></li>
 						<li><a href="https://twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
 					</ul>
