--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Priyanshu Sinha</p>
+			<p>Hi, I’m Priyanshu 👋🏼</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/ava.jpg" alt="Avatar">
