--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<h1>I love<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					I am currently a sophomore electrical engineering student at <b>Delhi Technological University (Formerly DCE)</b> who hopes to attend the Stanford School of
+					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering. who hopes to attend the Stanford School of
 					Engineering in coming years. I am really good at sketching, Web or Graphic Designing and Video Editing and always spend
 					my time in these hobbies while procrastinating other work.
 				</p>
