--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
 					<h1>I love<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering. who hopes to attend the Stanford School of
-					Engineering in coming years. I am really good at sketching, Web or Graphic Designing and Video Editing and always spend
-					my time in these hobbies while procrastinating other work.
+					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering.
+					If I had to describe myself in one phrase, I would say 'Emotional yet Logical'.
 				</p>
 			</div>
 		</div>
@@ -141,10 +140,10 @@
 			    <div class="unit-50">
 					<ul class="social list-flat right">
 						<li><a href="mailto:officialpriyanshusinha@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="https://www.instagram.com/trulysinha/"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="http://dribbble.com/priyanshusinha"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="https://twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="instagram.com/trulysinha/"><i class="fa fa-instagram"></i></a></li>
+						<li><a href="github.com/prynshsnh"><i class="fa fa-github"></i></a></li>
+						<li><a href="twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
 					</ul>
 			    </div>
 			</div>
