--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<p>
 					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering.
 					If I had to describe myself in one phrase, I would say 'Emotional yet Logical'.
-					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; Ali Abdaal, MKBHD, Mrwhosetheboss, Austin Evans are some of my favourite youtubers.
+					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; Ali Abdaal, MKBHD, Mrwhosetheboss, Austin Evans are some of my favourite youtubers.<br>
 					Talking about musical choices, we can't be friends if you haven't listened to 5SOS yet (I love them! ❤️‍🔥). You can check out my <a style="color: #22ac26" href="https://open.spotify.com/user/4851xnqv7ijz5xj923m8ubp8r?si=zKgC5z4JT5Gp6TErHoLKmg&utm_source=copy-link">Spotify</a> profile to discover more about me.
 				</p>
 			</div>
