--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["Rock Music", "to drink tea", "solving problems"],
+		strings: ["Rock Music", "to drink tea", "to sketch"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
