--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
 				<p>
 					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering.
 					If I had to describe myself in one phrase, I would say 'Emotional yet Logical'.
-					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; Ali Abdaal, MKBHD, Mrwhosetheboss, Austin Evans are some of my favourite youtubers.<br>
-					Talking about musical choices, we can't be friends if you haven't listened to 5SOS yet (I love them! ❤️‍🔥). You can check out my <a style="color: #22ac26" href="https://open.spotify.com/user/4851xnqv7ijz5xj923m8ubp8r?si=zKgC5z4JT5Gp6TErHoLKmg&utm_source=copy-link">Spotify</a> profile to discover more about me.
+					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; &nbsp Ali Abdaal, MKBHD, Mrwhosetheboss, Austin Evans are some of my favourite youtubers.
+					No, I don't watch anime, I tried (really liked One Punch Man) but not my bread and butter.<br><br>
+					Talking about musical choices, we can't be friends if you haven't listened to 5SOS yet (I love them! ❤️‍🔥). You can check me out on <a style="color: #22ac26" href="https://open.spotify.com/user/4851xnqv7ijz5xj923m8ubp8r?si=zKgC5z4JT5Gp6TErHoLKmg&utm_source=copy-link">Spotify</a>.
+					I am currently reading Predictably Irrational by Dan Ariely and watching a show called 1899 on Netlfix (it's really great). You can connect with me on LinkedIn or Instagram (all the links are down in the footer), but I don't accept requests from strangers on insta.
 				</p>
 			</div>
 		</div>
@@ -142,10 +144,10 @@
 			    <div class="unit-50">
 					<ul class="social list-flat right">
 						<li><a href="mailto:officialpriyanshusinha@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="instagram.com/trulysinha/"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="github.com/prynshsnh"><i class="fa fa-github"></i></a></li>
-						<li><a href="twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="https://linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://instagram.com/trulysinha/"><i class="fa fa-instagram"></i></a></li>
+						<li><a href="https://github.com/prynshsnh"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
 					</ul>
 			    </div>
 			</div>
