--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						<li><a href="mailto:officialpriyanshusinha@gmail.com"><i class="fa fa-send"></i></a></li>
 						<li><a href="https://linkedin.com/in/priyanshusinhadtu/r"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="https://instagram.com/trulysinha/"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="https://github.com/prynshsnh"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://github.com/prynshsnh" aria-label="Follow me on Github"><i class="fa fa-github"></i></a></li>
 						<li><a href="https://twitter.com/idkpriyanshu"><i class="fa fa-twitter"></i></a></li>
 					</ul>
 			    </div>
