--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hey! Myself Priyanshu Sinha from India. Welcome to my corner of the web.">
+	<meta name="keywords" content="Priyanshu, Sinha, DTU, Engineer, Portfolio, Resume, Delhi, India">
     <meta name="author" content="Priyanshu Sinha">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/kube.min.css" />
