--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 				<div class="unit-80">
 					<h1>I love<br><span id="typed"></span></h1>
 				</div>
-				<p>
+				<p align="justify">
 					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering.
 					If I had to describe myself in one phrase, I would say 'Emotional yet Logical'.
-					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; &nbsp Ali Abdaal, MKBHD, Mrwhosetheboss, Austin Evans are some of my favourite youtubers.
+					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; Ali Abdaal, MKBHD, Mrwhosetheboss are some of my favourite youtubers.
 					No, I don't watch anime, I tried (really liked One Punch Man) but not my bread and butter.<br><br>
 					Talking about musical choices, we can't be friends if you haven't listened to 5SOS yet (I love them! ❤️‍🔥). You can check me out on <a style="color: #22ac26" href="https://open.spotify.com/user/4851xnqv7ijz5xj923m8ubp8r?si=zKgC5z4JT5Gp6TErHoLKmg&utm_source=copy-link">Spotify</a>.
 					I am currently reading Predictably Irrational by Dan Ariely and watching a show called 1899 on Netlfix (it's really great). You can connect with me on LinkedIn or Instagram (all the links are down in the footer), but I don't accept requests from strangers on insta.
@@ -69,18 +69,20 @@
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
 				<li>Sep 2022 - Present</li>
-				<li><a href="https://www.teamraftaar.me">Team Raftaar DTU</a></li>
-				<li>Electrical and Electronics Engineer</li>
+				<li><a href="https://www.teamraftaar.me">Electrical and Electronics Engineer</a></li>
+				<li>Team RAFTAAR DTU</li>
+				<p>Designed a hybrid human-powered recumbent e-bike attaining speed upto 80kmph using Arduino and simulated the result on Simulink to compete in eHPVC.</p>
 			</ul>
 			<ul class="work-list">
-				<li>2022-Present</li>
-				<li><a href="#">Delhi Technological University</a></li>
-				<li>Undergraduate Researcher</li>
+				<li>2022 - Present</li>
+				<li><a href="#">Undergraduate Researcher</a></li>
+				<li>Delhi Technological University</li>
 			</ul>
 			<ul class="work-list">
-				<li>2021-Present</li>
-				<li><a href="#">Cultural Council and INNOVA DTU</a></li>
-				<li>Graphic Designer and Video-Editor</li>
+				<li>2021 - Present</li>
+				<li><a href="#">Graphic Designer and Video-Editor</a></li>
+				<li>Cultural Council and INNOVA DTU</li>
+				<p></p>
 			</ul>
 		</div>
 	</div>
