--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 				</div>
 				<p align="justify">
 					I am currently a sophomore at <b>Delhi Technological University (Formerly DCE)</b> studying electrical engineering.
+					I have completed my schooling from Delhi Public School R. K. Puram.
 					If I had to describe myself in one phrase, I would say 'Emotional yet Logical'.
 					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; Ali Abdaal, MKBHD, Mrwhosetheboss are some of my favourite youtubers.
 					No, I don't watch anime, I tried (really liked One Punch Man) but not my bread and butter.<br><br>
@@ -93,19 +94,18 @@
 			<h1>Award &amp;<br>Achievements</h1>
 			<ul class="award-list list-flat">
 				<li>August 2022</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+				<li><b>Ranked #2 out of 2500 students during my first year</b></li>
+				<li>Scored a GPA 9.86/10</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
+				<li>May 2021</li>
+				<li><b>Awarded scholar badge for consecutive years of academic excellence</b></li>
 				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>December 2016</li>
+				<li><b>Byjus Think and Learn Challenge Winner</b></li>
+				<li>Topped in my school and among one of the 150 students to get awarded with a tablet in the state of Delhi.</li>
 			</ul>
 		</div>
 	</div>
