--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="keywords" content="Priyanshu, Sinha, DTU, Engineer, Portfolio, Resume, Delhi, India">
     <meta name="author" content="Priyanshu Sinha">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="google-site-verification" content="_uhVKlArYTDA-AH_8PgA5ylZYYyidAxLkz_J2-fCUQM" />
     <link rel="stylesheet" href="css/kube.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/custom.min.css" />
