--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					After a long and tiring day you can find me binging tech, self-help and productivity videos on youtube; Ali Abdaal, MKBHD, Mrwhosetheboss are some of my favourite youtubers.
 					No, I don't watch anime, I tried (really liked One Punch Man) but not my bread and butter.<br><br>
 					Talking about musical choices, we can't be friends if you haven't listened to 5SOS yet (I love them! ❤️‍🔥). You can check me out on <a style="color: #22ac26" href="https://open.spotify.com/user/4851xnqv7ijz5xj923m8ubp8r?si=zKgC5z4JT5Gp6TErHoLKmg&utm_source=copy-link">Spotify</a>.
-					I am currently reading Predictably Irrational by Dan Ariely and watching a show called 1899 on Netlfix (it's really great). You can connect with me on LinkedIn or Instagram (all the links are down in the footer), but I don't accept requests from strangers on insta.
+					I am currently reading <i>Predictably Irrational</i> by Dan Ariely and watching a show called <i>1899</i> on Netflix (it's really great). You can connect with me on LinkedIn or Instagram (all the links are down in the footer), but I don't accept requests from strangers on insta.
 				</p>
 			</div>
 		</div>
@@ -84,7 +84,6 @@
 				<li>2021 - Present</li>
 				<li><a href="#">Graphic Designer and Video-Editor</a></li>
 				<li>Cultural Council and INNOVA DTU</li>
-				<p></p>
 			</ul>
 		</div>
 	</div>
